2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Off-screen clipping works for other scale factors too, but only in
	horizontal direction.

2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fixed bug introduced with last revision.

2008-03-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Don't draw off-screen thoughts. It is still a bit whacky and not working for
	scales other than 1.0.

2008-03-23 Martin Schaaf <mascha@ma-scha.de>

	* src/Browser.py
	o remember map sort order, fixes issue 75
	o catch exception if map is empty on file_save_cb

2008-03-23 Martin Schaaf <mascha@ma-scha.de>

	* src/PeriodicSaveThread.py
	* src/MainwindowThread.py
	o save open maps every 60 seconds, fixing issue 64

2008-03-23 Martin Schaaf <mascha@ma-scha.de>

	* debian/changelog
	* configure.ac
	o pump to version 0.4.0rc4
	* src/ImageThought.py
	* src/utils.py
	o convert pixel array from pixbuf rgb order to cairo rgb order on exporting

2008-03-22 Martin Schaaf <mascha@ma-scha.de>

	* debian/changelog
	* configure.ac
	o pump to version 0.4.0rc3
	* src/ImageThought.py
	o ignore if an image isn't exportable

2008-03-22 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* debian/control
	Add python-gconf dependency.

2008-03-22 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MapList.py
	* src/Browser.py
	Save configuration via gconf.

2008-03-21 Martin Schaaf <mascha@ma-scha.de>

	* src/ImageThought.py
	o export also bitmaps to cairo surface (pdf, svg), but there is a small color problem

2008-03-21 Martin Schaaf <mascha@ma-scha.de>

	* debian/control
	o add newer standard version
	* src/ImageThought.py
	o fix exception by only replace whole text if a parent node exist

2008-03-21 Martin Schaaf <mascha@ma-scha.de>

	* debian/*
	o add debian package management support
	* configure.ac
	o set version to 0.4.0rc2
